syntax = "proto3";

package io.vertx.grpcweb;

service TestService {
  rpc EmptyCall(Empty) returns (Empty);
  rpc UnaryCall(EchoRequest) returns (EchoResponse);
  rpc UnaryCallBody(EchoRequestBody) returns (EchoResponse);
  rpc UnaryCallResponseBody(EchoRequest) returns (EchoResponseBody);
  rpc StreamingCall(StreamingRequest) returns (stream StreamingResponse);
}

service UnimplementedService {
  rpc UnimplementedCall(Empty) returns (Empty); // Do not implement
}

message Empty {}

message EchoRequest {
  string payload = 1;
}

message EchoRequestBody {
  EchoRequest request = 1;
}

message EchoResponse {
  string payload = 1;
}

message EchoResponseBody {
  EchoResponse response = 1;
}

message StreamingRequest {
  repeated int32 response_size = 1;
}

message StreamingResponse {
  string payload = 1;
}
